--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
         "@ionic/storage": "2.1.3",
+        "angularfire2": "^5.0.0-rc.4",
+        "firebase": "4.8.0",
         "com.unarin.cordova.beacon": "~3.5.2",
         "cordova": "^8.0.0",
         "cordova-android": "^6.2.3",
