--- a/package.json
+++ b/package.json
@@ -23,24 +23,27 @@
         "@ionic-native/core": "4.4.0",
         "@ionic-native/geofence": "^4.5.2",
         "@ionic-native/ibeacon": "^4.5.2",
+        "@ionic-native/local-notifications": "^4.5.2",
         "@ionic-native/onesignal": "^4.5.2",
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
         "@ionic/storage": "2.1.3",
         "angularfire2": "^5.0.0-rc.4",
-        "firebase": "4.8.0",
         "com.unarin.cordova.beacon": "~3.5.2",
         "cordova": "^8.0.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-add-swift-support": "^1.6.0",
+        "cordova-plugin-badge": "^0.8.5",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geofence": "^0.7.0",
         "cordova-plugin-ibeacon": "^3.5.2",
         "cordova-plugin-ionic-webview": "^1.1.11",
+        "cordova-plugin-local-notification": "^0.9.0-beta.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.1",
         "es6-promise-plugin": "^4.1.1",
+        "firebase": "4.8.0",
         "ionic": "^3.19.0",
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -64,7 +67,8 @@
             "ionic-plugin-keyboard": {},
             "com.unarin.cordova.beacon": {},
             "onesignal-cordova-plugin": {},
-            "cordova-plugin-geofence": {}
+            "cordova-plugin-geofence": {},
+            "cordova-plugin-local-notification": {}
         },
         "platforms": [
             "android"
