--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
         "@ionic-native/core": "4.4.0",
+        "@ionic-native/email-composer": "^4.5.2",
         "@ionic-native/geofence": "^4.5.2",
         "@ionic-native/ibeacon": "^4.5.2",
         "@ionic-native/local-notifications": "^4.5.2",
@@ -36,6 +37,7 @@
         "cordova-plugin-badge": "^0.8.5",
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-email-composer": "^0.8.11",
         "cordova-plugin-geofence": "^0.7.0",
         "cordova-plugin-ibeacon": "^3.5.2",
         "cordova-plugin-ionic-webview": "^1.1.11",
@@ -68,7 +70,8 @@
             "com.unarin.cordova.beacon": {},
             "onesignal-cordova-plugin": {},
             "cordova-plugin-geofence": {},
-            "cordova-plugin-local-notification": {}
+            "cordova-plugin-local-notification": {},
+            "cordova-plugin-email-composer": {}
         },
         "platforms": [
             "android"
