--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "cordova-plugin-ionic-webview": "^1.1.11",
         "cordova-plugin-local-notification": "^0.9.0-beta.1",
         "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.4.0",
         "cordova-plugin-whitelist": "^1.3.1",
         "es6-promise-plugin": "^4.1.1",
         "firebase": "4.8.0",
@@ -71,7 +72,8 @@
             "onesignal-cordova-plugin": {},
             "cordova-plugin-geofence": {},
             "cordova-plugin-local-notification": {},
-            "cordova-plugin-email-composer": {}
+            "cordova-plugin-email-composer": {},
+            "cordova-plugin-statusbar": {}
         },
         "platforms": [
             "android"
