--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/email-composer": "^4.5.2",
         "@ionic-native/geofence": "^4.5.2",
         "@ionic-native/ibeacon": "^4.5.2",
+        "@ionic-native/in-app-browser": "^4.5.2",
         "@ionic-native/local-notifications": "^4.5.2",
         "@ionic-native/onesignal": "^4.5.2",
         "@ionic-native/splash-screen": "4.4.0",
@@ -40,6 +41,7 @@
         "cordova-plugin-email-composer": "^0.8.11",
         "cordova-plugin-geofence": "^0.7.0",
         "cordova-plugin-ibeacon": "^3.5.2",
+        "cordova-plugin-inappbrowser": "^1.7.2",
         "cordova-plugin-ionic-webview": "^1.1.11",
         "cordova-plugin-local-notification": "^0.9.0-beta.1",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -73,7 +75,8 @@
             "cordova-plugin-geofence": {},
             "cordova-plugin-local-notification": {},
             "cordova-plugin-email-composer": {},
-            "cordova-plugin-statusbar": {}
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android"
