--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/core": "4.4.0",
         "@ionic-native/email-composer": "^4.5.2",
         "@ionic-native/geofence": "^4.5.2",
+        "@ionic-native/google-maps": "^4.5.2",
         "@ionic-native/ibeacon": "^4.5.2",
         "@ionic-native/in-app-browser": "^4.5.2",
         "@ionic-native/local-notifications": "^4.5.2",
@@ -40,6 +41,7 @@
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-email-composer": "^0.8.11",
         "cordova-plugin-geofence": "^0.7.0",
+        "cordova-plugin-googlemaps": "^2.1.1",
         "cordova-plugin-ibeacon": "^3.5.2",
         "cordova-plugin-inappbrowser": "^1.7.2",
         "cordova-plugin-ionic-webview": "^1.1.11",
@@ -76,7 +78,11 @@
             "cordova-plugin-local-notification": {},
             "cordova-plugin-email-composer": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_ANDROID": "AIzaSyCamZqCcentXZBk36v_YVqPLD8BkW32nJ4",
+                "API_KEY_FOR_IOS": "AIzaSyBetQ7fnrQKJSpLAy6U5k-V-rgPi8gXHAo"
+            }
         },
         "platforms": [
             "android"
