--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "@ionic-native/onesignal": "^4.5.2",
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
+        "@ionic-native/video-player": "^4.5.2",
+        "@ionic-native/youtube-video-player": "^4.5.2",
         "@ionic/storage": "2.1.3",
         "angularfire2": "^5.0.0-rc.4",
         "com.unarin.cordova.beacon": "~3.5.2",
@@ -56,7 +58,9 @@
         "cordova-plugin-local-notification": "^0.9.0-beta.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.4.0",
+        "cordova-plugin-video-player": "^1.0.1",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-youtube-video-player": "^1.0.6",
         "es6-promise-plugin": "^4.1.1",
         "firebase": "4.8.0",
         "ionic": "^3.19.0",
@@ -66,7 +70,8 @@
         "onesignal-cordova-plugin": "^2.2.5",
         "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
+        "zone.js": "0.8.18",
+        "com.moust.cordova.videoplayer": "~1.0.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.6",
@@ -94,7 +99,9 @@
             "cordova-plugin-document-viewer": {},
             "cordova-plugin-file-opener2": {},
             "cordova-plugin-file": {},
-            "cordova-plugin-file-transfer": {}
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-youtube-video-player": {},
+            "com.moust.cordova.videoplayer": {}
         },
         "platforms": [
             "android"
