--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "@ionic-native/youtube-video-player": "^4.5.2",
         "@ionic/storage": "2.1.3",
         "angularfire2": "^5.0.0-rc.4",
+        "chart.js": "^2.7.1",
+        "com.moust.cordova.videoplayer": "~1.0.1",
         "com.unarin.cordova.beacon": "~3.5.2",
         "cordova": "^8.0.0",
         "cordova-android": "^6.2.3",
@@ -70,8 +72,7 @@
         "onesignal-cordova-plugin": "^2.2.5",
         "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18",
-        "com.moust.cordova.videoplayer": "~1.0.1"
+        "zone.js": "0.8.18"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.6",
